Develop (#9)
* Java 11 upgrade

* Solving improved

* Java 11 & rounding removed & cucumber added

* Logging level decreased

* Update XirrCalculator.java

* Update XirrCashflow.java

* Update AbstractSolver.java

* Solver improved

* Holidays refectored

* Clean

* Holidays test

* Inspection advices

* List.of

Co-authored-by: Janusz Kowal <jkowal@corelogic.com>
Co-authored-by: Janusz Kowal <jkowal-cl@cgmail.com>